impl with dao: spring dao support link: https://docs.spring.io/spring/docs/current/spring-framework-reference/data-access.html#dao

--- a/springsql/src/main/resources/application.yml
+++ b/springsql/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update  # DDL mode. shortcut for "hibernate.hbm2ddl.auto" property.
+      ddl-auto: create-drop  # DDL mode. shortcut for "hibernate.hbm2ddl.auto" property.
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL82Dialect
