--- a/springrestful/build.gradle
+++ b/springrestful/build.gradle
@@ -44,11 +44,15 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
-    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    compile 'org.springframework.security.oauth:spring-security-oauth2:2.3.0.RELEASE'
+    compile "org.flywaydb:flyway-core:5.0.7"
+    runtime('org.postgresql:postgresql')
     runtime('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.springframework.security:spring-security-test')
 }
