--- a/springrestful/src/main/resources/application.yml
+++ b/springrestful/src/main/resources/application.yml
@@ -35,6 +35,25 @@ spring:
 debug: false # Enable debug logs.
 trace: false # Enable trace logs.
 
+security:
+  oauth2:
+    resource:
+      filter-order: 3
+
+  signing-key: MaYzkSjmkzPC57L
+  encoding-strength: 256
+  security-realm: Spring Boot JWT Example Realm
+
+  jwt:
+    client-id: testjwtclientid
+    client-secret: XY7kmzoNzl100
+    grant-type: password
+    scope-read: read
+    scope-write: write
+    resource-ids: testjwtresourceid
+
+
+
 logging:
   file: /Users/Junjun/Repository/logs/logs.log
   pattern:
