--- a/springrestful/src/main/resources/application.yml
+++ b/springrestful/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     show-sql: true
     generate-ddl: true # Whether to initialize the schema on startup.
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
