--- a/springrestful/build.gradle
+++ b/springrestful/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         springBootVersion = '2.0.0.RELEASE'
     }
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -20,9 +20,14 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: "kotlin-jpa"
+apply plugin: 'application'
+
+mainClassName = 'com.junjunguo.user.UserDemoApplicationKt'
+
+defaultTasks 'run'
 
 group = 'com.junjunguo.user'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 sourceCompatibility = 1.8
 compileKotlin {
     kotlinOptions {
@@ -38,7 +43,7 @@ compileTestKotlin {
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 
@@ -56,4 +61,6 @@ dependencies {
     runtime('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
+
 }
