add translate service; add frinds: controller, service, repo, entity, util, status enum ...

--- a/fullstack/backend/build.gradle
+++ b/fullstack/backend/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-//        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlinVersion"
     }
 }
 
@@ -19,7 +19,7 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-//apply plugin: "kotlin-jpa"
+apply plugin: "kotlin-jpa"
 apply plugin: 'application'
 
 mainClassName = 'com.junjunguo.user.UserDemoApplicationKt'
