--- a/fullstack/frontend/package.json
+++ b/fullstack/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Junjun Guo",
+  "homepage": "http://junjunguo.com/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -24,7 +24,8 @@
     "@ionic-native/core": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
+    "cordova-sqlite-storage": "^2.3.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
@@ -38,5 +39,10 @@
     "tslint": "^5.9.1",
     "codelyzer": "^4.3.0"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
