update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -66,58 +66,32 @@ build/
 *~
 *.sw[mnpcod]
 *.log
-*.lock
 *.tmp
 *.tmp.*
 log.txt
 *.sublime-project
 *.sublime-workspace
+.vscode/
+npm-debug.log*
 
 .idea/
-.vscode/
+.sourcemaps/
 .sass-cache/
+.tmp/
 .versions/
 coverage/
-collection/
 dist/
 node_modules/
 tmp/
 temp/
-core/theme-builder/
-core/test-components/
+hooks/
+platforms/
+plugins/
+plugins/android.json
+plugins/ios.json
+www/
 $RECYCLE.BIN/
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-.env
-
-.package.tmp.json
-
-src/themes/version.scss
-scripts/e2e/webpackEntryPoints.json
-scripts/build/e2e-generated-tsconfig.json
-*.css.ts
-
-stencil-stats.json
-
-plugins/
-.sourcemaps/
-
-*.mode1v3
-*.perspectivev3
-*.pbxuser
-platforms/ios/build
-
-platforms/android/build.xml
-platforms/android/local.properties
-platforms/android/gradlew
-platforms/android/gradlew.bat
-platforms/android/gradle
-
-platforms/android/build
-
-platforms/android/gen
-platforms/android/out
-
-
