--- a/fullstack/frontend/package.json
+++ b/fullstack/frontend/package.json
@@ -35,9 +35,10 @@
   "devDependencies": {
     "@angular/language-service": "5.2.10",
     "@ionic/app-scripts": "3.1.9",
-    "typescript": "~2.6.2",
+    "codelyzer": "^4.3.0",
+    "prettier": "1.12.1",
     "tslint": "^5.9.1",
-    "codelyzer": "^4.3.0"
+    "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
   "cordova": {
